--- a/spug_api/requirements.txt
+++ b/spug_api/requirements.txt
@@ -10,3 +10,6 @@ GitPython==3.1.41
 python-ldap==3.4.0
 openpyxl==3.0.3
 user_agents==2.2.0
+mysqlclient==2.1.1
+cryptography==41.0.7
+pyOpenSSL==23.2.0
