--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -53,21 +53,30 @@ http {
 	gzip_disable "MSIE [1-6]\.";
 	gzip_vary on;
 
-        location ^~ /api/ {
-                rewrite ^/api(.*) $1 break;
-                proxy_pass http://127.0.0.1:9001;
-		proxy_read_timeout 180s;
-                proxy_redirect off;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
         location ^~ /api/ws/ {
                 rewrite ^/api(.*) $1 break;
                 proxy_pass http://127.0.0.1:9002;
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection "Upgrade";
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_read_timeout 3600s;
+                proxy_send_timeout 3600s;
+                proxy_buffering off;
+        }
+
+        location ^~ /api/ {
+                rewrite ^/api(.*) $1 break;
+                proxy_pass http://127.0.0.1:9001;
+                proxy_read_timeout 180s;
+                proxy_redirect off;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
         }
        
         location / {
